browser/components/aboutlogins/content/aboutLogins.css
body
{
-
-
sidebar
-
width
:
320px
;
display
:
grid
;
grid
-
template
-
columns
:
var
(
-
-
sidebar
-
width
)
1fr
;
grid
-
template
-
rows
:
75px
1fr
;
grid
-
template
-
areas
:
"
header
header
"
"
logins
login
"
;
height
:
100vh
;
}
header
{
display
:
flex
;
grid
-
area
:
header
;
align
-
items
:
center
;
background
-
color
:
var
(
-
-
in
-
content
-
page
-
background
)
;
border
-
bottom
:
1px
solid
var
(
-
-
in
-
content
-
border
-
color
)
;
padding
-
inline
-
end
:
23px
;
}
login
-
filter
{
min
-
width
:
200px
;
max
-
width
:
400px
;
margin
-
inline
:
40px
auto
;
flex
-
grow
:
0
.
5
;
align
-
self
:
center
;
}
fxaccounts
-
button
menu
-
button
{
margin
-
inline
-
start
:
18px
;
}
login
-
list
{
grid
-
area
:
logins
;
}
:
root
:
not
(
.
initialized
)
login
-
intro
:
root
:
not
(
.
initialized
)
login
-
item
:
root
.
empty
-
search
login
-
intro
:
root
:
not
(
.
no
-
logins
)
:
not
(
.
empty
-
search
)
:
not
(
.
login
-
selected
)
login
-
intro
login
-
item
[
data
-
editing
=
"
true
"
]
+
login
-
intro
.
login
-
selected
login
-
intro
:
root
:
not
(
.
login
-
selected
)
login
-
item
:
not
(
[
data
-
editing
=
"
true
"
]
)
.
no
-
logins
login
-
item
:
not
(
[
data
-
editing
=
"
true
"
]
)
{
display
:
none
;
}
login
-
intro
login
-
item
{
grid
-
area
:
login
;
}
#
branding
-
logo
{
flex
-
basis
:
var
(
-
-
sidebar
-
width
)
;
flex
-
shrink
:
0
;
height
:
32px
;
-
moz
-
context
-
properties
:
fill
;
fill
:
#
20123a
;
}
supports
-
moz
-
bool
-
pref
(
"
browser
.
in
-
content
.
dark
-
mode
"
)
{
media
(
prefers
-
color
-
scheme
:
dark
)
{
#
branding
-
logo
{
fill
:
#
fff
;
}
}
}
:
root
:
not
(
.
official
-
branding
)
#
branding
-
logo
{
visibility
:
hidden
;
}
:
root
:
not
(
.
master
-
password
-
auth
-
required
)
#
master
-
password
-
required
-
overlay
{
display
:
none
;
}
.
master
-
password
-
auth
-
required
>
body
>
header
.
master
-
password
-
auth
-
required
>
body
>
login
-
list
.
master
-
password
-
auth
-
required
>
body
>
login
-
intro
{
filter
:
blur
(
2px
)
}
#
master
-
password
-
required
-
overlay
{
z
-
index
:
1
;
position
:
fixed
;
width
:
100vw
;
height
:
100vh
;
background
-
color
:
rgba
(
0
0
0
0
.
2
)
;
}

