Bug 1625960 - Stop showing double vertical scrollbars in about:logins. r=jaws
Differential Revision: https://phabricator.services.mozilla.com/D68935

UltraBlame original commit: 5ee3ef8ba1e775fc6a617eb09b5268811709531c

--- a/browser/components/aboutlogins/content/aboutLogins.css
+++ b/browser/components/aboutlogins/content/aboutLogins.css
@@ -1,3 +1,12 @@
+html
+body
+{
+height
+:
+100
+%
+;
+}
 body
 {
 -
@@ -51,10 +60,6 @@ header
 logins
 login
 "
-;
-height
-:
-100vh
 ;
 }
 header
